new i18n strings added
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1254 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -81,6 +81,7 @@ name=Name
 networkFailure=Network failure
 next=Next
 new=New
+newAccount=New account
 newName=New name:
 no=No
 noAccountFound=In order to use the SIP-Communicator you need at least one registered account. The following pages will guide you through the process of creating an account.
@@ -167,9 +168,11 @@ mnemonic.renameContact=N
 mnemonic.viewHistory=V
 mnemonic.userInfo=U
 
+mnemonic.close=C
+
 mnemonic.save=S
 mnemonic.print=P
-mnemonic.close=O
+mnemonic.rightMenuClose=O
 mnemonic.cut=T
 mnemonic.copy=C
 
@@ -194,6 +197,12 @@ mnemonic.rejectButton=R
 mnemonic.ignoreButton=I
 
 mnemonic.requestButton=R
+
+mnemonic.newAccount=N
+
+mnemonic.tools=T
+
+mnemonic.toolsMenuConfig=C
 
 january=Jan
 february=Feb
