--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -5,10 +5,12 @@ accounts=Accounts
 activateOnlyWhenMinimized=Activate only when minimized
 add=Add
 addContact=Add contact
-addContactError=Failed to find contact with id: ?
-addContactErrorTitle=Add contact Warning
+addContactError=Failed to add contact with id: ?
+addContactErrorTitle=Add contact Error
 addContactIdentifier=In the field below enter the identifier of the contact you would like to add.
 addContactWizard=Add contact wizard
+addGroupError=Failed to add group with name: ?
+addGroupErrorTitle=Add group Error
 addSubcontact=Add subcontact
 allContacts=All contacts
 alwaysOnTop=Always on top
@@ -39,6 +41,7 @@ contacts=Contacts
 continue=Continue
 copy=Copy
 copyLink=Copy link
+createGroup=Create new group
 cut=Cut
 date=Date
 description=Description
@@ -121,7 +124,7 @@ selectAccount=Select account
 selectAccountRegistration=From the list below select the account registration wizard to use for creating a new account.
 selectAccountRegWizardTitle=Select account registration
 selectGroup=Select group
-selectGroupWizard=The list below contains all groups in your Contact List. Select these one, where you would like to add the new contact.
+selectGroupWizard=The list below contains all groups in your Contact List. Select these one, where you would like to add the new contact or create a new group using the button below.
 selectGroupWizardTitle=Select group(s)
 selectProvidersWizard=The list below contains all registered accounts. Select these one you would like to use to communicate with the new contact.
 selectProvidersWizardTitle=Select account(s)
