common menu containing add contact and create group
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1323 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -41,7 +41,9 @@ contacts=Contacts
 continue=Continue
 copy=Copy
 copyLink=Copy link
+create=Create
 createGroup=Create new group
+createGroupName=In the field below enter the name of the group you would like to create.
 cut=Cut
 date=Date
 description=Description
@@ -56,6 +58,7 @@ extendedCriteria=Extended criteria
 general=General
 generalError=General error
 group=Group
+groupName=Group name
 file=File
 finish=Finish
 first=First
