rename and remove group
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1328 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -111,9 +111,12 @@ remove=Remove
 removeAccount=Remove account
 removeAccountMessage=Are you sure you want to remove this account?
 removeContact=Remove contact
+removeGroup=Remove group
 rename=Rename
 renameContact=Rename contact
 renameContactWizard=In the field below you can specify the name you would like to use for the given contact.
+renameGroup=Rename group
+renameGroupInfo=In the field below you can specify the name you would like to use for the given group.
 request=Request
 requestAuthorization=Request authorization
 requestAuthorizationInfo=Can't add ? to your Contact List. ? must authorize your request to add him/her. Please enter your request below.
@@ -173,7 +176,8 @@ mnemonic.removeContact=R
 mnemonic.renameContact=N
 mnemonic.viewHistory=V
 mnemonic.userInfo=U
-
+mnemonic.addContact=A
+mnemonic.createGroup=R
 mnemonic.close=C
 
 mnemonic.save=S
