change menu names
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1329 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -153,6 +153,7 @@ unregisteredMessage=You have been disconnected from the ? server. Please check y
 updateAutomatically=Automatically install new updates
 updates=Updates
 userInfo=User info
+view=View
 viewHistory=View history
 warning=Warning
 yes=Yes
@@ -179,6 +180,7 @@ mnemonic.userInfo=U
 mnemonic.addContact=A
 mnemonic.createGroup=R
 mnemonic.close=C
+mnemonic.view=V
 
 mnemonic.save=S
 mnemonic.print=P
@@ -212,7 +214,7 @@ mnemonic.newAccount=N
 
 mnemonic.tools=T
 
-mnemonic.toolsMenuConfig=C
+mnemonic.toolsMenuSettings=S
 
 january=Jan
 february=Feb
