--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -7,10 +7,14 @@ add=Add
 addContact=Add contact
 addContactError=Failed to add contact with id: ?
 addContactErrorTitle=Add contact Error
+addContactExistError=The contact you're trying to add already exists in your contact list.
 addContactIdentifier=In the field below enter the identifier of the contact you would like to add.
 addContactWizard=Add contact wizard
-addGroupError=Failed to add group with name: ?
+addGroupLocalError=Failed to add group with name: ?. The problem occured during a local IO operation.
+addGroupNetError=Failed to add group with name: ?. The problem occured due to a network failure. Please check your network connection and try again.
+addGroupError=Failed to add group with name: ?.
 addGroupErrorTitle=Add group Error
+addGroupExistError=The group you're trying to create already exists in your contact list.
 addSubcontact=Add subcontact
 allContacts=All contacts
 alwaysOnTop=Always on top
