--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -33,6 +33,7 @@ callList=Call list
 cancel=Cancel
 close=Close
 closeChatAfterNewMsg=You have received a new message less than 2 seconds ago. Are you sure you want to close this chat?
+conference=Conference
 configure=Configure
 configurations=Configurations
 connectionFailed=Connection failed
@@ -82,6 +83,8 @@ login=Login
 loginWindowTitle=Login ?
 me=me
 modify=Modify
+moveSubcontactMsg=Select the contact, where you would like to move.
+moveSubcontact=Move Subcontact
 moveToGroup=Move to group
 msgDeliveryFailure=Message delivery failure
 msgNotDelivered=Message to ? could not be delivered due to a network problem.
