--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -85,6 +85,7 @@ me=me
 modify=Modify
 moveSubcontactMsg=Select the contact, where you would like to move.
 moveSubcontact=Move Subcontact
+moveSubcontactInSameContact=The contact you have choosen is the same as the source one. Please choose another contact!
 moveToGroup=Move to group
 msgDeliveryFailure=Message delivery failure
 msgNotDelivered=Message to ? could not be delivered due to a network problem.
