"send via" string added
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1429 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -85,7 +85,7 @@ me=me
 modify=Modify
 moveSubcontactMsg=Select the contact, where you would like to move.
 moveSubcontact=Move Subcontact
-moveSubcontactInSameContact=The contact you have choosen is the same as the source one. Please choose another contact!
+moveSubcontactInSameContact=The contact you have choosen is the same as \n the source one. Please choose another contact!
 moveToGroup=Move to group
 msgDeliveryFailure=Message delivery failure
 msgNotDelivered=Message to ? could not be delivered due to a network problem.
@@ -145,6 +145,7 @@ selectProvidersWizardTitle=Select account(s)
 send=Send
 sendFile=Send file
 sendMessage=Send a message
+sendVia=Send via
 settings=Settings
 showOfflineUsers=Show offline users
 sipCommunicator=SIPCommunicator
