--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -88,6 +88,8 @@ moveSubcontact=Move Subcontact
 moveSubcontactInSameContact=The contact you have choosen is the same as \n the source one. Please choose another contact!
 moveToGroup=Move to group
 msgDeliveryFailure=Message delivery failure
+msgDeliveryOfflineNotSupported=The protocol you are using doesn't support offline messages. You could try to reach this contact through another protocol or wait until he/she becomes online.
+msgDeliveryInternalError=Your message could not be delivered due to an internal error. This is most probably a bug. Please report it here: http://www.sip-communicator.org/index.php/Development/BugsAndIssues
 msgNotDelivered=Message to ? could not be delivered due to a network problem.
 msgSendConnectionProblem=The message you are trying to send could not be delivered, because you are currently offline. Check your network connection.
 multipleLogins=You have logged in more than once with the same account. ? account is currently disconnected.
@@ -107,6 +109,7 @@ openInBrowser=Open in browser
 passwd=Password:
 paste=Paste
 previous=Previous
+providerNotConnected=You must be connected to be able to communicate.
 print=Print
 protocol=Protocol
 quit=Quit
@@ -158,6 +161,7 @@ tools=Tools
 typingNotifications=Typing notifications
 uin=UIN:
 unknown=Unknown user
+unknownError=Unknown error has occured.
 unregisteredMessage=You have been disconnected from the ? server. Please check your network connection.
 updateAutomatically=Automatically install new updates
 updates=Updates
