--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -91,7 +91,7 @@ msgDeliveryFailure=Message delivery failure
 msgDeliveryOfflineNotSupported=The protocol you are using doesn't support offline messages. You could try to reach this contact through another protocol or wait until he/she becomes online.
 msgDeliveryInternalError=Your message could not be delivered due to an internal error. This is most probably a bug. Please report it here: http://www.sip-communicator.org/index.php/Development/BugsAndIssues
 msgNotDelivered=Message to ? could not be delivered due to a network problem.
-msgSendConnectionProblem=The message you are trying to send could not be delivered, because you are currently offline. Check your network connection.
+msgSendConnectionProblem=The message you are trying to send could not be delivered, because you are currently offline.
 multipleLogins=You have logged in more than once with the same account. ? account is currently disconnected.
 name=Name 
 networkFailure=Network failure
