--- a/resources/install/debian/changelog
+++ b/resources/install/debian/changelog
@@ -1,6 +1,18 @@
-sip-communicator (1.0-alpha1) unstable; urgency=low
+sip-communicator (1.0-alpha1-2) unstable; urgency=low
+
+  * Changed oscar behavior to deploy its bundles in
+    ~/.noscar/sip-communicator.bin
+  * Removed remaining files not useful here, ie only for testing: junit.jar,
+    oscar.unit.test.properties and testing.properties
+
+ -- Martin Andre <mandre@dev.java.net>  Thu, 12 Oct 2006 12:20:36 +0900
+
+sip-communicator (1.0-alpha1-1) unstable; urgency=low
 
   * Initial release
+  * Created a basic man page
+  * Created an excutable shell script to launch SIP Communicator
+  * Removed all slicks libs already inclueded in Debian
 
  -- Martin Andre <mandre@dev.java.net>  Mon, 25 Sep 2006 11:51:01 +0900
 
