--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -39,6 +39,7 @@ configurations=Configurations
 connectionFailed=Connection failed
 connectionFailedMessage=The connection could not be established due to a network \n problem. Please check your network configuration.
 connectionExpiredMessage=You are currently disconnected from the ? server.
+contactNotSupportingTelephony=The choosen contact doesn't support telephony.
 contactPausedTyping=? paused typing the message
 contactTyping=? is typing a message
 contactTypingStateStale=typing state not updated
@@ -105,6 +106,8 @@ nonEmptyChatWindowClose=You're trying to close a chat with a non-sent message. A
 nonExistingUserId=The ? server does not recognize specified user id.
 notifications=Notifications
 ok=OK
+offline=Offline
+online=Online
 openInBrowser=Open in browser
 passwd=Password:
 paste=Paste
@@ -116,6 +119,7 @@ quit=Quit
 ready=Ready
 reconnectionLimitExceeded=You have have been disconnecting and reconnecting to the server too fast. ? account is temporarily banned and would have to wait a bit before trying to login again.
 refresh=Refresh
+registrationTimeout=Registration timeout:
 reject=Reject
 rememberPassword=Remember password
 remove=Remove
