--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -20,6 +20,7 @@ allContacts=All contacts
 alwaysOnTop=Always on top
 appearance=Appearance
 application=Application
+at=at
 authAccepted=contact has accepted your authorization request.
 authenticationWindowTitle=Authentication requested
 authRejected=contact has rejected your authorization request.
@@ -55,6 +56,7 @@ date=Date
 description=Description
 dial=Dial
 doNotAskAgain=Don't ask again
+duration=Duration
 edit=Edit
 emptyHistory=Empty history
 enableNotifications=Enable notifications
@@ -76,6 +78,7 @@ hour=Hour
 identifier=Identifier
 ignore=Ignore
 insertSmiley=Insert smiley
+invalidCall=Invalid call
 last=Last
 launchBrowserError=Error attempting to launch web browser
 launchOnStartUp=Launch on start up
@@ -107,6 +110,7 @@ nonExistingUserId=The ? server does not recognize specified user id.
 notifications=Notifications
 ok=OK
 offline=Offline
+olderCalls=Older calls
 online=Online
 openInBrowser=Open in browser
 passwd=Password:
