"all" added in the "call list" search combo box
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1594 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -16,6 +16,7 @@ addGroupError=Failed to add group with name: ?.
 addGroupErrorTitle=Add group Error
 addGroupExistError=The group you're trying to create already exists in your contact list.
 addSubcontact=Add subcontact
+all=All
 allContacts=All contacts
 alwaysOnTop=Always on top
 appearance=Appearance
@@ -116,9 +117,9 @@ openInBrowser=Open in browser
 passwd=Password:
 paste=Paste
 previous=Previous
-providerNotConnected=You must be connected to be able to communicate.
 print=Print
 protocol=Protocol
+providerNotConnected=You must be connected to be able to communicate.
 quit=Quit
 ready=Ready
 reconnectionLimitExceeded=You have have been disconnecting and reconnecting to the server too fast. ? account is temporarily banned and would have to wait a bit before trying to login again.
