open the call panel without waiting for the call support for a conference call - ongoing work
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1651 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -41,7 +41,7 @@ configurations=Configurations
 connectionFailed=Connection failed
 connectionFailedMessage=The connection could not be established due to a network \n problem. Please check your network configuration.
 connectionExpiredMessage=You are currently disconnected from the ? server.
-contactNotSupportingTelephony=The choosen contact doesn't support telephony.
+contactNotSupportingTelephony=The choosen  ? contact doesn't support telephony.
 contactPausedTyping=? paused typing the message
 contactTyping=? is typing a message
 contactTypingStateStale=typing state not updated
@@ -159,7 +159,7 @@ sendFile=Send file
 sendMessage=Send a message
 sendVia=Send via
 settings=Settings
-showOfflineUsers=Show offline users
+showOfflineUsers=Hide/Show offline users
 sipCommunicator=SIPCommunicator
 statusChangedChatMessage=has become ?
 statusChangeGeneralError=The status could not be changed due to a general application error.
