more precise error messages
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1742 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -27,7 +27,7 @@ authenticationWindowTitle=Authentication requested
 authRejected=contact has rejected your authorization request.
 authorizationRequested=Authorization requested
 authorizationRequestedInfo=The ? contact requests your authorization.
-authenticationFailed=Authentication failed. The password you entered is not valid.
+authenticationFailed=The authentication for account ? failed. The password you entered is not valid.
 authorizationResponse=Authorization response
 back=Back 
 call=Call
@@ -39,7 +39,7 @@ conference=Conference
 configure=Configure
 configuration=Configuration
 connectionFailed=Connection failed
-connectionFailedMessage=The connection could not be established due to a network \n problem. Please check your network configuration.
+connectionFailedMessage=Connection for accout ? failed.
 connectionExpiredMessage=You are currently disconnected from the ? server.
 contactNotSupportingTelephony=The choosen  ? contact doesn't support telephony.
 contactPausedTyping=? paused typing the message
@@ -73,6 +73,7 @@ finish=Finish
 first=First
 font=Font
 help=?
+hideCallPanel=Hide call panel
 history=History
 historyContact=History - ?
 hour=Hour
