--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -171,7 +171,7 @@ tools=Tools
 typingNotifications=Typing notifications
 uin=UIN:
 unknown=Unknown user
-unknownError=Unknown error has occured.
+msgDeliveryFailedUnknownError=Unknown error has occured while delivering your message.
 unregisteredMessage=You have been disconnected from the ? server. Please check your network connection.
 updateAutomatically=Automatically install new updates
 updates=Updates
