user info disabled or enabled depending on the support coming from the protocol
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1756 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -57,6 +57,7 @@ date=Date
 description=Description
 dial=Dial
 doNotAskAgain=Don't ask again
+dontSupportWebInfo=This contact doesn't support web contact info
 duration=Duration
 edit=Edit
 emptyHistory=Empty history
