--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -94,11 +94,11 @@ moveSubcontactMsg=Select the contact, where you would like to move.
 moveSubcontact=Move Subcontact
 moveSubcontactInSameContact=The contact you have choosen is the same as \n the source one. Please choose another contact!
 moveToGroup=Move to group
-msgDeliveryFailure=Message delivery failure
+msgDeliveryFailure=The above message could not be delivered
 msgDeliveryOfflineNotSupported=The protocol you are using doesn't support offline messages. You could try to reach this contact through another protocol or wait until he/she becomes online.
-msgDeliveryInternalError=Your message could not be delivered due to an internal error. This is most probably a bug. Please report it here: http://www.sip-communicator.org/index.php/Development/BugsAndIssues
-msgNotDelivered=Message to ? could not be delivered due to a network problem.
-msgSendConnectionProblem=The message you are trying to send could not be delivered, because you are currently offline.
+msgDeliveryInternalError=An internal error occured. This is most probably a bug. Please report it here: http://www.sip-communicator.org/index.php/Development/BugsAndIssues
+msgNotDelivered=A network problem occured.
+msgSendConnectionProblem=You should be connected to be able to send messages.
 multipleLogins=You have logged in more than once with the same account. ? account is currently disconnected.
 name=Name 
 networkFailure=Network failure
