catch OperationFailedExceprtion on ProtocolProviderService.register and ProtocolProviderService.unregister
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1762 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -87,7 +87,9 @@ launchBrowserError=Error attempting to launch web browser
 launchOnStartUp=Launch on start up
 limitReachedForIp=You have too many existing registrations from the local IP address and the ? server doesn't allow to open any more of them.
 login=Login
+loginNotSucceeded=An error occured while logging in the ? account.
 loginWindowTitle=Login ?
+logoffNotSucceeded=An error occured while logging off the ? account.
 me=me
 modify=Modify
 moveSubcontactMsg=Select the contact, where you would like to move.
