Base configuration of the send message command
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1777 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -62,6 +62,7 @@ duration=Duration
 edit=Edit
 emptyHistory=Empty history
 enableNotifications=Enable notifications
+enableTypingNotifications=Enable typing notifications
 error=Error
 exit=Exit
 extendedCriteria=Extended criteria
@@ -160,6 +161,7 @@ selectProvidersWizard=The list below contains all registered accounts. Select th
 selectProvidersWizardTitle=Select account(s)
 send=Send
 sendFile=Send file
+useEnterToSend=Use Enter to send
 sendMessage=Send a message
 sendVia=Send via
 settings=Settings
@@ -171,7 +173,6 @@ statusChangeNetworkFailure=The status could not be changed due to a network \n f
 summary=Summary
 today=Today
 tools=Tools
-typingNotifications=Typing notifications
 uin=UIN:
 unknown=Unknown user
 msgDeliveryFailedUnknownError=Unknown error has occured while delivering your message.
