Sending a message with Enter is made the default behavour
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1797 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -161,7 +161,7 @@ selectProvidersWizard=The list below contains all registered accounts. Select th
 selectProvidersWizardTitle=Select account(s)
 send=Send
 sendFile=Send file
-useEnterToSend=Use Enter to send
+useCtrlEnterToSend=Use Ctrl-Enter to send
 sendMessage=Send a message
 sendVia=Send via
 settings=Settings
