"call via" - choose the account to call from
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1877 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -32,6 +32,7 @@ authenticationFailed=The authentication for account ? failed. The password you e
 authorizationResponse=Authorization response
 back=Back 
 call=Call
+callVia=Call via:
 callList=Call list
 cancel=Cancel
 close=Close
