mnemonic key for move subcontact menu
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1881 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -201,6 +201,7 @@ mnemonic.continue=C
 mnemonic.sendMessage=S
 mnemonic.sendFile=E
 mnemonic.moveTo=M
+mnemonic.moveSubcontact=O
 mnemonic.addSubcontact=A
 mnemonic.removeContact=R
 mnemonic.renameContact=N
