accelerator key for hiding and showing the call panel
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1882 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -167,6 +167,7 @@ useCtrlEnterToSend=Use Ctrl-Enter to send
 sendMessage=Send a message
 sendVia=Send via
 settings=Settings
+showCallPanel=Show call panel
 showOfflineUsers=Hide/Show offline users
 sipCommunicator=SIPCommunicator
 statusChangedChatMessage=has become ?
