show a message to user when no info is available for a certain contact
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1883 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -164,6 +164,7 @@ selectProvidersWizardTitle=Select account(s)
 send=Send
 sendFile=Send file
 useCtrlEnterToSend=Use Ctrl-Enter to send
+selectContactSupportingInfo=There is no info for this contact.
 sendMessage=Send a message
 sendVia=Send via
 settings=Settings
