--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -180,7 +180,7 @@ tools=Tools
 uin=UIN:
 unknown=Unknown user
 msgDeliveryFailedUnknownError=Unknown error has occured while delivering your message.
-unregisteredMessage=You have been disconnected from the ? server. Please check your network connection.
+unregisteredMessage=Unable to connect to ? server. You are currently offline.
 updateAutomatically=Automatically install new updates
 updates=Updates
 userInfo=User info
