mnemonic character is now defined in the string by adding before it a & char.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1928 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -1,11 +1,11 @@
-about=About
-accept=Accept
+about=&About
+accept=&Accept
 account=Account
 accountRegistrationWizard=Account Registration Wizard
 accounts=Accounts
 activateOnlyWhenMinimized=Activate only when minimized
-add=Add
-addContact=Add contact
+add=&Add
+addContact=&Add contact
 addContactError=Failed to add contact with id: ?
 addContactErrorTitle=Add contact Error
 addContactExistError=The contact you're trying to add already exists in your contact list.
@@ -16,9 +16,9 @@ addGroupNetError=Failed to add group with name: ?. The problem occured due to a 
 addGroupError=Failed to add group with name: ?.
 addGroupErrorTitle=Add group Error
 addGroupExistError=The group you're trying to create already exists in your contact list.
-addSubcontact=Add subcontact
-all=All
-allContacts=All contacts
+addSubcontact=&Add subcontact
+all=&All
+allContacts=&All contacts
 alwaysOnTop=Always on top
 appearance=Appearance
 application=Application
@@ -30,15 +30,15 @@ authorizationRequested=Authorization requested
 authorizationRequestedInfo=The ? contact requests your authorization.
 authenticationFailed=The authentication for account ? failed. The password you entered is not valid.
 authorizationResponse=Authorization response
-back=Back 
+back=&Back 
 call=Call
 callVia=Call via:
 callList=Call list
-cancel=Cancel
-close=Close
+cancel=&Cancel
+close=Cl&ose
 closeChatAfterNewMsg=You have received a new message less than 2 seconds ago. Are you sure you want to close this chat?
 conference=Conference
-configure=Configure
+configure=&Configure
 configuration=Configuration
 connectionFailed=Connection failed
 connectionFailedMessage=Connection for accout ? failed.
@@ -48,37 +48,37 @@ contactPausedTyping=? paused typing the message
 contactTyping=? is typing a message
 contactTypingStateStale=typing state not updated
 contacts=Contacts
-continue=Continue
-copy=Copy
-copyLink=Copy link
-create=Create
-createGroup=Create new group
+continue=&Continue
+copy=&Copy
+copyLink=Copy &link
+create=C&reate
+createGroup=C&reate new group
 createGroupName=In the field below enter the name of the group you would like to create.
-cut=Cut
+cut=C&ut
 date=Date
 description=Description
-dial=Dial
+dial=&Dial
 doNotAskAgain=Don't ask again
 dontSupportWebInfo=This contact doesn't support web contact info
 duration=Duration
-edit=Edit
-emptyHistory=Empty history
+edit=&Edit
+emptyHistory=&Empty history
 enableNotifications=Enable notifications
-enableTypingNotifications=Enable typing notifications
+enableTypingNotifications=Enable &typing notifications
 error=Error
-exit=Exit
+exit=E&xit
 extendedCriteria=Extended criteria
 general=General
 generalError=General error
 group=Group
 groupName=Group name
-file=File
-finish=Finish
+file=&File
+finish=&Finish
 first=First
 font=Font
 help=?
-hideCallPanel=Hide call panel
-history=History
+hideCallPanel=&Hide call panel
+history=&History
 historyContact=History - ?
 hour=Hour
 identifier=Identifier
@@ -89,16 +89,16 @@ last=Last
 launchBrowserError=Error attempting to launch web browser
 launchOnStartUp=Launch on start up
 limitReachedForIp=You have too many existing registrations from the local IP address and the ? server doesn't allow to open any more of them.
-login=Login
+login=&Login
 loginNotSucceeded=An error occured while logging in the ? account.
 loginWindowTitle=Login ?
 logoffNotSucceeded=An error occured while logging off the ? account.
 me=me
-modify=Modify
+modify=&Modify
 moveSubcontactMsg=Select the contact, where you would like to move.
-moveSubcontact=Move Subcontact
+moveSubcontact=M&ove Subcontact
 moveSubcontactInSameContact=The contact you have choosen is the same as \n the source one. Please choose another contact!
-moveToGroup=Move to group
+moveToGroup=&Move to group
 msgDeliveryFailure=The above message could not be delivered
 msgDeliveryOfflineNotSupported=The protocol you are using doesn't support offline messages. You could try to reach this contact through another protocol or wait until he/she becomes online.
 msgDeliveryInternalError=An internal error occured. This is most probably a bug. Please report it here: http://www.sip-communicator.org/index.php/Development/BugsAndIssues
@@ -107,51 +107,51 @@ msgSendConnectionProblem=You should be connected to be able to send messages.
 multipleLogins=You have logged in more than once with the same account. ? account is currently disconnected.
 name=Name 
 networkFailure=Network failure
-next=Next
-new=New
-newAccount=New account
+next=&Next
+new=&New
+newAccount=&New account
 newName=New name:
 no=No
 noAccountFound=In order to use the SIP-Communicator you need at least one registered account. The following pages will guide you through the process of creating an account.
 nonEmptyChatWindowClose=You're trying to close a chat with a non-sent message. Are you sure you want to close this chat?
 nonExistingUserId=The ? server does not recognize specified user id.
 notifications=Notifications
-ok=OK
+ok=&OK
 offline=Offline
 olderCalls=Older calls
 online=Online
-openInBrowser=Open in browser
+openInBrowser=Open in &browser
 passwd=Password:
-paste=Paste
+paste=&Paste
 previous=Previous
-print=Print
+print=&Print
 protocol=Protocol
 providerNotConnected=You must be connected to be able to communicate.
-quit=Quit
+quit=&Quit
 ready=Ready
 reconnectionLimitExceeded=You have have been disconnecting and reconnecting to the server too fast. ? account is temporarily banned and would have to wait a bit before trying to login again.
 refresh=Refresh
 registrationTimeout=Registration timeout:
-reject=Reject
+reject=&Reject
 rememberPassword=Remember password
-remove=Remove
-removeAccount=Remove account
+remove=&Remove
+removeAccount=&Remove account
 removeAccountMessage=Are you sure you want to remove this account?
-removeContact=Remove contact
-removeGroup=Remove group
-rename=Rename
-renameContact=Rename contact
+removeContact=&Remove contact
+removeGroup=&Remove group
+rename=&Rename
+renameContact=Re&name contact
 renameContactWizard=In the field below you can specify the name you would like to use for the given contact.
-renameGroup=Rename group
+renameGroup=Re&name group
 renameGroupInfo=In the field below you can specify the name you would like to use for the given group.
-request=Request
-requestAuthorization=Request authorization
+request=&Request
+requestAuthorization=&Request authorization
 requestAuthorizationInfo=Can't add ? to your Contact List. ? must authorize your request to add him/her. Please enter your request below.
 requestAuthReason=Request reason
 requestAuthReasonEnter=Enter request reason
 responseAuthReasonEnter=Enter response reason
-save=Save
-search=Search
+save=&Save
+search=&Search
 securityAuthorityRealm=The ? server has requested your authentication. 
 selectAccount=Select account
 selectAccountRegistration=From the list below select the account registration wizard to use for creating a new account.
@@ -161,13 +161,13 @@ selectGroupWizard=The list below contains all groups in your Contact List. Selec
 selectGroupWizardTitle=Select group(s)
 selectProvidersWizard=The list below contains all registered accounts. Select these one you would like to use to communicate with the new contact.
 selectProvidersWizardTitle=Select account(s)
-send=Send
-sendFile=Send file
-useCtrlEnterToSend=Use Ctrl-Enter to send
+send=&Send
+sendFile=S&end file
+useCtrlEnterToSend=Use Ctrl-&Enter to send
 selectContactSupportingInfo=There is no info for this contact.
-sendMessage=Send a message
+sendMessage=&Send a message
 sendVia=Send via
-settings=Settings
+settings=&Settings
 showCallPanel=Show call panel
 showOfflineUsers=Hide/Show offline users
 sipCommunicator=SIPCommunicator
@@ -176,77 +176,19 @@ statusChangeGeneralError=The status could not be changed due to a general applic
 statusChangeNetworkFailure=The status could not be changed due to a network \n failure. Please check yout network connection.
 summary=Summary
 today=Today
-tools=Tools
+tools=&Tools
 uin=UIN:
 unknown=Unknown user
 msgDeliveryFailedUnknownError=Unknown error has occured while delivering your message.
 unregisteredMessage=Unable to connect to ? server. You are currently offline.
 updateAutomatically=Automatically install new updates
 updates=Updates
-userInfo=User info
-view=View
-viewHistory=View history
+userInfo=&User info
+view=&View
+viewHistory=View &history
 warning=Warning
 yes=Yes
 yesterday=Yesterday
-
-mnemonic.file=F
-mnemonic.tools=T
-mnemonic.settings=S
-mnemonic.help=H
-mnemonic.edit=E
-mnemonic.chatSettings=T
-
-mnemonic.exit=X
-mnemonic.continue=C
-
-mnemonic.sendMessage=S
-mnemonic.sendFile=E
-mnemonic.moveTo=M
-mnemonic.moveSubcontact=O
-mnemonic.addSubcontact=A
-mnemonic.removeContact=R
-mnemonic.renameContact=N
-mnemonic.viewHistory=V
-mnemonic.userInfo=U
-mnemonic.addContact=A
-mnemonic.createGroup=R
-mnemonic.close=C
-mnemonic.view=V
-
-mnemonic.save=S
-mnemonic.print=P
-mnemonic.rightMenuClose=O
-mnemonic.cut=T
-mnemonic.copy=C
-
-mnemonic.paste=P
-
-mnemonic.typingNotifications=T
-
-mnemonic.back=B
-mnemonic.next=N
-mnemonic.cancel=C
-
-mnemonic.newAccount=N
-mnemonic.modifyAccount=M
-mnemonic.removeAccount=R
-
-mnemonic.renameContactButton=R
-
-mnemonic.search=S
-
-mnemonic.acceptButton=A
-mnemonic.rejectButton=R
-mnemonic.ignoreButton=I
-
-mnemonic.requestButton=R
-
-mnemonic.newAccount=N
-
-mnemonic.tools=T
-
-mnemonic.toolsMenuSettings=S
 
 january=Jan
 february=Feb
