more precise error messages
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1941 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -8,14 +8,14 @@ add=&Add
 addContact=&Add contact
 addContactError=Failed to add contact with id: ?
 addContactErrorTitle=Add contact Error
-addContactExistError=The contact you're trying to add already exists in your contact list.
+addContactExistError=The contact ? already exists in your contact list.
 addContactIdentifier=In the field below enter the identifier of the contact you would like to add.
 addContactWizard=Add contact wizard
 addGroupLocalError=Failed to add group with name: ?. The problem occured during a local IO operation.
 addGroupNetError=Failed to add group with name: ?. The problem occured due to a network failure. Please check your network connection and try again.
 addGroupError=Failed to add group with name: ?.
 addGroupErrorTitle=Add group Error
-addGroupExistError=The group you're trying to create already exists in your contact list.
+addGroupExistError=The group ? already exists in your contact list.
 addSubcontact=&Add subcontact
 all=&All
 allContacts=&All contacts
@@ -86,13 +86,13 @@ ignore=Ignore
 insertSmiley=Insert smiley
 invalidCall=Invalid call
 last=Last
-launchBrowserError=Error attempting to launch web browser
+launchBrowserError=Error attempting to launch web browser.
 launchOnStartUp=Launch on start up
 limitReachedForIp=You have too many existing registrations from the local IP address and the ? server doesn't allow to open any more of them.
 login=&Login
-loginNotSucceeded=An error occured while logging in the ? account.
+loginNotSucceeded=An error occured while logging in with ? account.
 loginWindowTitle=Login ?
-logoffNotSucceeded=An error occured while logging off the ? account.
+logoffNotSucceeded=An error occured while logging off with ? account.
 me=me
 modify=&Modify
 moveSubcontactMsg=Select the contact, where you would like to move.
@@ -172,15 +172,15 @@ showCallPanel=Show call panel
 showOfflineUsers=Hide/Show offline users
 sipCommunicator=SIPCommunicator
 statusChangedChatMessage=has become ?
-statusChangeGeneralError=The status could not be changed due to a general application error.
-statusChangeNetworkFailure=The status could not be changed due to a network \n failure. Please check yout network connection.
+statusChangeGeneralError=Failed to change status for ? account due to a general error.
+statusChangeNetworkFailure=Failed to change status for ? account due to a network problem.
 summary=Summary
 today=Today
 tools=&Tools
 uin=UIN:
 unknown=Unknown user
 msgDeliveryFailedUnknownError=Unknown error has occured while delivering your message.
-unregisteredMessage=Unable to connect to ? server. You are currently offline.
+unregisteredMessage=Unable to connect ? account. You are currently offline.
 updateAutomatically=Automatically install new updates
 updates=Updates
 userInfo=&User info
