remove all not used text areas from authorization windows
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1949 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -177,6 +177,7 @@ statusChangeNetworkFailure=Failed to change status for ? account due to a networ
 summary=Summary
 today=Today
 tools=&Tools
+typeYourRequest=Type your request here
 uin=UIN:
 unknown=Unknown user
 msgDeliveryFailedUnknownError=Unknown error has occured while delivering your message.
