in the "Add contact" wizard - select the group from a combo box (only one group at a time should be selected)
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1968 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -52,7 +52,6 @@ continue=&Continue
 copy=&Copy
 copyLink=Copy &link
 create=C&reate
-createGroup=C&reate new group
 createGroupName=In the field below enter the name of the group you would like to create.
 cut=C&ut
 date=Date
@@ -157,7 +156,7 @@ selectAccount=Select account
 selectAccountRegistration=From the list below select the account registration wizard to use for creating a new account.
 selectAccountRegWizardTitle=Select account registration
 selectGroup=Select group
-selectGroupWizard=The list below contains all groups in your Contact List. Select these one, where you would like to add the new contact or create a new group using the button below.
+selectGroupWizard=The list below contains all groups in your Contact List. Select the one, where you would like to add the new contact. To add it in a new group simply write the name of the group in the field.
 selectGroupWizardTitle=Select group(s)
 selectProvidersWizard=The list below contains all registered accounts. Select these one you would like to use to communicate with the new contact.
 selectProvidersWizardTitle=Select account(s)
