remove the possibility to create a group during the add contact process
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1979 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -52,6 +52,7 @@ continue=&Continue
 copy=&Copy
 copyLink=Copy &link
 create=C&reate
+createGroup=&Create group
 createGroupName=In the field below enter the name of the group you would like to create.
 cut=C&ut
 date=Date
@@ -156,8 +157,8 @@ selectAccount=Select account
 selectAccountRegistration=From the list below select the account registration wizard to use for creating a new account.
 selectAccountRegWizardTitle=Select account registration
 selectGroup=Select group
-selectGroupWizard=The list below contains all groups in your Contact List. Select the one, where you would like to add the new contact. To add it in a new group simply write the name of the group in the field.
-selectGroupWizardTitle=Select group(s)
+selectGroupWizard=The list below contains all groups in your Contact List. Select the one, where you would like to add the new contact.
+selectGroupWizardTitle=Select group
 selectProvidersWizard=The list below contains all registered accounts. Select these one you would like to use to communicate with the new contact.
 selectProvidersWizardTitle=Select account(s)
 send=&Send
