--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -41,7 +41,7 @@ conference=Conference
 configure=&Configure
 configuration=Configuration
 connectionFailed=Connection failed
-connectionFailedMessage=Connection for accout ? failed.
+connectionFailedMessage=Connection for account ? failed.
 connectionExpiredMessage=You are currently disconnected from the ? server.
 contactNotSupportingTelephony=The choosen  ? contact doesn't support telephony.
 contactPausedTyping=? paused typing the message
