sound button tooltip
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@2091 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -171,6 +171,7 @@ settings=&Settings
 showCallPanel=Show call panel
 showOfflineUsers=Hide/Show offline users
 sipCommunicator=SIPCommunicator
+soundOnOff=Turn sound on/off
 statusChangedChatMessage=has become ?
 statusChangeGeneralError=Failed to change status for ? account due to a general error.
 statusChangeNetworkFailure=Failed to change status for ? account due to a network problem.
