change the "Remove contact" menu item to "Remove subcontact". In fact what it does;
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@2187 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -137,7 +137,7 @@ rememberPassword=Remember password
 remove=&Remove
 removeAccount=&Remove account
 removeAccountMessage=Are you sure you want to remove this account?
-removeContact=&Remove contact
+removeContact=&Remove subcontact
 removeGroup=&Remove group
 rename=&Rename
 renameContact=Re&name contact
