request focus in chat window configurable property
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@2209 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -30,6 +30,7 @@ authorizationRequested=Authorization requested
 authorizationRequestedInfo=The ? contact requests your authorization.
 authenticationFailed=The authentication for account ? failed. The password you entered is not valid.
 authorizationResponse=Authorization response
+autoPopup=Autopopup new message
 back=&Back 
 call=Call
 callVia=Call via:
