--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -30,7 +30,7 @@ authorizationRequested=Authorization requested
 authorizationRequestedInfo=The ? contact requests your authorization.
 authenticationFailed=The authentication for account ? failed. The password you entered is not valid.
 authorizationResponse=Authorization response
-autoPopup=Autopopup new message
+autoPopup=Bring window to front
 back=&Back 
 call=Call
 callVia=Call via:
